--- a/chance/bookDaDong.html
+++ b/chance/bookDaDong.html
@@ -9,7 +9,7 @@
     <meta name="author" content="Benson">
     <!-- <link rel="icon" href="../../favicon.ico"> -->
 
-	<title>灶王真經</title>
+	<title>孚佑帝君大洞真經</title>
 	<script src="js/chancelist.js"></script>
 	 <!-- Bootstrap core CSS -->
     <link href="../css/bootstrap.min.css" rel="stylesheet">
@@ -37,126 +37,101 @@
 
 	<div class="container">
 	  	<div class="page-header">
-	        <h1>灶王真經</h1>
+	        <h1>孚佑帝君降筆大洞真經</h1>
 	        <div class="lead">
-                <h1>九天真元顯應誨世靈寶金經</h1>
+                <h1>孚佑帝君呂祖救苦救難神咒</h1>
                 <br>
-                <p>九重天上灶王尊 靈霄輔相鎮乾坤</p>
-                <p>三界全權都在握 人間禍福掌操中</p>
-                <p>斯世不知多褻慢 難逃禍患萃盈門</p>
-                <p>吾今大發慈悲念 降造金經一卷文</p>
-                <p>句淺意深人意曉 布告善男信女們</p>
-                <p>有能朝夕誠心誦 一瓣清香透九重</p>
-                <p>隨時念誦吾隨到 迪吉消災佑滿門</p>
-                <p>求子便能生貴子 求安可保合家春</p>
-                <p>求名立見名高發 求利無難利路通</p>
-                <p>孝子為親求福壽 添齡賜福樂欣欣</p>
-                <p>無求不應真靈驗 只要誠心朗誦勤</p>
-                <p>一遍三功神記錄 終身持唸格蒼穹</p>
-                <p>心體力行多善果 時時足下起祥雲</p>
-                <p>生享榮華添百福 死歸神道蔭兒孫</p>
-                <p>今經一卷非閒說 人世休將做具文</p>
-                <p>叮嚀切切留心記 天大福基在此敦</p>
-                <p>男婦果能遵教訓 修功積德姓名芳</p>
-                <p>(金經誦畢焚香九叩禮續誦)     </p>
+                <p>至心歸老祖。求脫人間苦。疾病無纏綿。安寧天擁護。十干十二支。</p>
+                <p>二十八宿主。天神玉女聞。盡皆降吾杵。寶劍自光芒。殺斬妖魅阻。</p>
+                <p>葫蘆貯靈丹。度盡凡夫苦。牢獄枷鎖災。水火並瘟毒。刀兵急厄臨。</p>
+                <p>路中逢險阻。一切苦相縈。持此化成土。隨念隨時來。降我吉星輔。</p>
+                <p>過去盡生方。現存賴恩主。一聲誦永寧。全家伏龍虎  有此聖靈章。</p>
+                <p>萬魔咸束首。太上呂帝君。急急如律令。</p>
                 <br><br>
-                <h1>灶王神經</h1>
+
+                <h1>南宮孚佑帝君降筆大洞真經</h1>
                 <br>
-                <p>灶王菩薩灶神經 灶神原來在天庭</p>
-                <p>只因人世心改變 玉帝差吾下凡塵</p>
-                <p>親身下降察善惡 看民回心不回心</p>
-                <p>灶神本是一家主 莫把菩薩看的輕</p>
-                <p>灶王府君家家有 凡眼怎見神靈身</p>
-                <p>時時家家親察照 善善惡惡看得清</p>
-                <p>有等不賢潑婦女 全不把吾放在心</p>
-                <p>灶上堆得不成樣 鞋襪放在上面存</p>
-                <p>主家之人不管說 穢物廚中用意烹</p>
-                <p>那論大小衣物等 滿灶熏得惡霧行</p>
-                <p>不管潔淨不潔淨 輕慢神靈罪不輕</p>
-                <p>牛犬畜肉放灶上 你看欺心不欺心</p>
-                <p>守自灶前把人罵 惡言惡語實難聽</p>
-                <p>有等婦人灶前哭 哭得吾神不安寧</p>
-                <p>掃把打灶有大過 坐灶之人罪不輕</p>
-                <p>殺雞灶上來砍殺 那有這樣大膽人</p>
-                <p>年頭月尾不打掃 灰塵霧住吾得身</p>
-                <p>這樣把神來輕慢 可恨凡民大欺心</p>
-                <p>個個神壽有人敬 那個說起吾灶神</p>
-                <p>八月初三神壽誕 全不提動半毫分</p>
-                <p>是神壽誕鬧熱熱 唯有灶神冷清清</p>
-                <p>民若把吾神敬   八月初三記在心</p>
-                <p>灶前便把香燈點 茶果齋供盡片心</p>
-                <p>非怪吾神要爾敬 因你凡民大欺心</p>
-                <p>奉勸世人休忘記 無吾灶神也不成</p>
-                <p>人有誠心神感應 五瘟使者不入門</p>
-                <p>一切禍患齊掃散 丟下前緣接後因</p>
-                <p>回頭再把灶王表 正直無私不順情</p>
-                <p>轉回天宮奏</p>
-                <p>玉帝 善惡不隱半毫分</p>
-                <p>玉帝聞言心大怒 差遣五瘟下凡塵</p>
-                <p>積善之家不可去 作惡之家汝便行</p>
-                <p>兇惡男女遭大難 頃刻急症入幽冥</p>
-                <p>死在陰司還受罪 你想逃脫萬不能</p>
-                <p>罪滿轉輪王發放 善惡報應見分明</p>
-                <p>大善投胎大富貴 中等頭胎中等人</p>
-                <p>大惡投生變畜類 小惡投生變賤貧</p>
-                <p>或是癡聾與瘖啞 牛馬豬羊去還人</p>
-                <p>灶王今把凡民勸 依得神言是福人</p>
-                <p>虧心除盡平生福 奸巧短壽把命傾</p>
-                <p>閤家人口保安甯 世人不聽吾神勸</p>
-                <p>怕你後悔枉費心 吾神臘月歸天去</p>
-                <p>真言奏上玉皇尊 惡惡善善從直講</p>
-                <p>再不隱瞞半毫分 大秤小斗心不足</p>
-                <p>還在人前使假銀 扭毫捏索良心喪</p>
-                <p>買賣欺善不公平 淫人婦女罪不輕</p>
-                <p>貪人財物喪良心 暗地把人來唆弄</p>
-                <p>他再中間做好人 有的仗勢來欺弱</p>
-                <p>欺老罵少起惡心 打僧罵道怨天地</p>
-                <p>勸人開葷罪不輕 作賤五穀該何罪</p>
-                <p>貪圖口腹忍傷生 在生之時不自問</p>
-                <p>死後陰司見假真 地獄受盡千般苦</p>
-                <p>陽世那個說是真 敲瞌他人錢合米</p>
-                <p>變做牛馬還他人 爾看一報還一報</p>
-                <p>奉勸男女仔細想 莫把吾言當假真</p>
-                <p>笑順父母為第一 忠君愛民一等人</p>
-                <p>第二須當敬兄長 第三夫婦要和平</p>
-                <p>朋友說話要信實 奴僕寬恕可在心</p>
-                <p>一般也是父母養 只為家寒兩離分</p>
-                <p>假使自己兒和女 別人屈打憐不憐</p>
-                <p>行事須當存天理 切莫欺死又瞞生</p>
-                <p>逢人將經來勸解 廣積陰德與兒孫</p>
-                <p>灶王勸人費心苦 看民回心不回心</p>
-                <p>偈曰</p>
-                <p>東廚司命君 留下灶王經 見面抄一本 子孫享科名</p>
-                <p>眼下無災厄 禍患不臨門 吾神八月壽 初三記在心</p>
-                <p>若把吾經唸 齋戒忌油葷 初一並十五 各自要誠心</p>
-                <p>信者有好處 不信自墮身 死後見報復 報應見假真</p>
-                <p>勸人抄十卷 解去一世冤 勸人抄百本 九祖得升天</p>
-                <p>吾神不虛說 保你富貴全 不敬吾神者 枉生塵世間</p>
-                <br><br>
-                <h1>灶君降筆文</h1>
-                <br>
-                <p>教事已停 吾來降臨 一家之主 萬戶福神</p>
-                <p>職掌冊簿 絲毫奏呈 時逢末劫 苦救眾生</p>
-                <p>諸神屢降 疊作訓文 家中善惡 一一講明</p>
-                <p>不敬天地 不禮神明 不孝雙親 不奉先人</p>
-                <p>不畏王法 不重師尊 不敬伯叔 不和鄉鄰</p>
-                <p>夫妻反目 兄弟傷情 最恨婦女 不事二尊</p>
-                <p>不和妯娌 不敬夫君 暗唆丈夫 遂把家分</p>
-                <p>若分家業 不讓分文 爾為男子 罔有乃身</p>
-                <p>放僻邪侈 奸盜邪淫 縱使妻子 辱罵尊親</p>
-                <p>不分內外 不別尊卑 好尚作偽 欺哄愚人</p>
-                <p>閑遊懶惰 不重儉勤 謀人田產 百計橫強</p>
-                <p>貧不安分 詐索金銀 至於吾灶 五祀獨尊</p>
-                <p>或傍牛圈 或對豬門 近或雞圈 臭氣難聞</p>
-                <p>或當五臘 咒罵紛紛 或敲鍋灶 赤體露身</p>
-                <p>或烘衣服 哭唱灶門 或有產婦 舉足亂行</p>
-                <p>或罵兒女 大氣高聲 吾今言明 各宜小心</p>
-                <p>善惡冊籍 不差毫分 每月晦日 奏上天庭</p>
-                <p>善超惡墮 毫不容情 最喜男女 拜佛誦經</p>
-                <p>果能改悔 片善登存 呂公起念 感動吾神</p>
-                <p>愈公愈妄 現身指陳 非愛享祭 非喜香燈</p>
-                <p>一家大小 總在心真 吾言雖淺 願人奉行</p>
-                <p>戒之勉之 敬奉吾經 禍患不起 福子家興</p>
+                <p>孚佑帝君讚曰</p>
+                <p>關聖帝君。作事清白不愧為聖行為。端正方可為神。</p>
+                <p>孔夫子。何為聖。聖所以作春秋也。</p>
+                <p>關夫子。何為聖。聖所以讀春秋也。</p>
+                <p>先聖後聖其揆一也。</p>
+                <p>古洞引讚真經。</p>
+                <p>梓潼帝君讚曰。桃源古洞真經。</p>
+                <p>天地正氣。道德長存。金闕內相。孚佑帝君。</p>
+                <p>純陽一氣。妙道天尊。慈悲下界醒喚沉淪。</p>
+                <p>或歌或曲或詩或文。婆心切切。戒之諄諄。</p>
+                <p>千千集首。萬萬典型。朗讀經偈。神服鬼欽。</p>
+                <p>辟邪除穢。劍斬妖精。葫蘆發火。乃祥乃禎。</p>
+                <p>收妖滅怪。霹靂雷聲。黃巾力士六甲六丁。</p>
+                <p>千災掃盡。百福來臨。乾元亨利貞。急急如律令。</p>
+                <p>關聖帝君寶讚  志心皈命禮。</p>
+                <p>太薇紫薇。佛賜文尼。大願大眾。大慈大悲。</p>
+                <p>救難救苦。每落瑤池。三世因果。醒人途迷。</p>
+                <p>渡登彼岸。拔上天梯。示引南北。指人東西。</p>
+                <p>天君鑒察。柳將查稽。稽查賜福。福壽綿長。</p>
+                <p>金闕內相。道號純陽。葫蘆發火。顯赫立功。</p>
+                <p>威聲普化。閃閃電光。日月星斗。雷雨雲風。</p>
+                <p>三昧真火。一氣青鋒。辟邪滅怪。魑魅魎魍。</p>
+                <p>輕聲朗誦。一切皆空。玉樓鑒訂。南天南宮。</p>
+                <p>天歡地喜。鬼沒神藏。乾坎艮震。巽離坤宮。</p>
+                <p>兌招百福。坎納千祥。乾統天兵。艮斬妖精。</p>
+                <p>震捉妖魔。巽賜乃禎。離統雷火。坤載利貞。</p>
+                <p>乾元亨利貞。急急如律令。</p>
+                <p>大洞寶誥。世宇長存。金闕內相。道號純陽。</p>
+                <p>玉樓職任。孚佑帝君。萬書千典有。吾經尚未聞。</p>
+                <p>武帝明聖經。文昌陰騭文。吾著大洞卷。</p>
+                <p>三聖齊頒行。三世因果先前有。大洞真經隨後成。</p>
+                <p>昔日但知閬苑客。而今方識太薇星。諭汝傳塵世。</p>
+                <p>使人各遵行。經文雖淺近。不可視為輕。</p>
+                <p>道存天地同休戚。德配乾坤不壞身。</p>
+                <p>任吾敕召天廷將。憑吾催請地府神。日遊天下稽善惡。</p>
+                <p>夜到寰區談果因。值日值時將。值時值日兵。</p>
+                <p>三山五嶽聽號令。五湖四海各遵行。</p>
+                <p>三光照耀。日月斗星。六丁六甲。值日天兵。</p>
+                <p>二十八宿。聽經號令。</p>
+                <p>天廷日差五雷將。南宮夜使柳徒星。天下城隍並境主。</p>
+                <p>世宇八方土地神。一切神明聽經語。稽查功過讀聖經。</p>
+                <p>如有世人祈賜福。准行消災福來臨。有過之人當速改。</p>
+                <p>革故鼎新罪移輕。聖人未敢言無過。過勿憚改算為人。</p>
+                <p>缺德之人求懺梅。如改前非亦淮行。時時刻刻知改過。</p>
+                <p>青天不加悔罪人。改卻前非便無過。無過之人吉祥增。</p>
+                <p>再加脩福功完滿。善功完滿樂天倫。樂盡天倫災消滅。</p>
+                <p>災消福集道德存。道德長存。風調雨順定太平。</p>
+                <p>國泰民安天賜福。一切災殃化作塵。化作塵。</p>
+                <p>成仙成佛總由人。總由人。四時無災。八節有慶。</p>
+                <p>經到奉行。乾元亨利貞。</p>
+                <p>古洞大洞桃源經。焚香朗誦虔叩請。祈福即來臨。</p>
+                <p>求壽天賜福。父母享遐齡。伯叔並昆仲。自已可延生。</p>
+                <p>一切高朗誦。分功祥瑞增。如求過世樁萱者。</p>
+                <p>並求怕叔與弟兄。朝夕虔朗誦。快樂逍遙登。</p>
+                <p>照吾經中語。九元七祖盡超昇。若求自已福。</p>
+                <p>並祈闔家平。日讀千百語。夜誦百千聲。</p>
+                <p>驅邪並逐祟。禎祥紫氣臨。求名及與利。</p>
+                <p>虎榜定標名。利人並利己。利害看分明。</p>
+                <p>若求生產厄。房中產麒麟。求子生丹桂。</p>
+                <p>求運好前程。行人經朗誦。鬼賊不相侵。</p>
+                <p>三江四海上。聽得真經聲。大風並大浪。</p>
+                <p>風波立刻平。照吾的言語。一一皆有靈。</p>
+                <p>口誦心而維。必得把善施。世人可瞞騙。</p>
+                <p>青天不可欺。欲挽人覺悟。神仙下瑤池。</p>
+                <p>或歌或作賦。或曲並吟詩。聲聲喚人醒。</p>
+                <p>句句字珠璣。說吾身現身。說法渡眾生。</p>
+                <p>吾居唐孝廉。出仕甚古風。官吏職欽點。</p>
+                <p>巡狩逢師鍾。</p>
+                <p>一夢南柯熟黃粱。平生事業盡皆空。嗟晚不得。</p>
+                <p>先帝高宗。受師點化。攜妻子榮歸故鄉。住古洞。</p>
+                <p>洞裡之賓取名字。子亡妻卒。曰純陽。學劍法。</p>
+                <p>柳星收為童。苦修練。玉皇封金闕內相。掌善惡。</p>
+                <p>五文昌內稽過功。八仙中曰醉翁。世道茫茫走西東。</p>
+                <p>多少田園也是空。尋得名利珍珍寶。付與兒孫一場空。</p>
+                <p>一旦咽喉呼吸斷。了了然然總是空。兒孫滿堂怎得見。</p>
+                <p>黃泉路上不相逢。孽鏡上。憑過功。自已平生不修德。</p>
+                <p>到頭何話見閻王。積些家業如珠寶。難贖冤愆上天堂。</p>
+                <p>何不學成袁了凡。可脫苦海渺茫茫。不孝子。雷電攻。</p>
+                <p>好淫悖逆經免誦。致引天廷降災殃。為人知禮必知義。</p>
+                <p>尊重三綱及五常。勤修德。積善功。吾經朗誦恭叩請</p>
+                <p>金闕內相妙道天尊。(三稱)</p>
             </div>
 	    </div>
 	</div>
