--- a/chance/bookChengHuang.html
+++ b/chance/bookChengHuang.html
@@ -39,109 +39,51 @@
 	  	<div class="page-header">
 	        <h1>城隍明道經</h1>
 	        <div class="lead">
-                <h1>淨心神咒</h1>
+
+
+                <h1>城隍尊神寶誥  志心皈命禮</h1>
                 <br>
-                <p>太上臺生。應變無停。驅邪縛魅。保命護身。</p>
-                <p>智慧明淨。心神安寧。三魂永久。魄無喪傾。</p>
-                <p>急急如律令。</p>
+                <p>廣東挺傑。薊北歸神。受敕封於玉陛。司保障於蒼生。</p>
+                <p>亙古忠靈。千秋正氣。判冥陽之是非。掌官民之禍福。</p>
+                <p>史冊昭昭。名垂宇宙。神威赫赫。功報烝嘗。燮理陰陽。</p>
+                <p>權衡賞罰。代天宣化。為國救民。保世安寧。立功行善。</p>
+                <p>贊襄吏治。協運鴻圖。大忠大惠。大德大仁。</p>
+                <p>敕封昇福明靈王。當境城隍。金湯鞏固天尊。</p>
                 <br>
-                <h1>灶王神經</h1>
+                <h1>城隍明道經</h1>
                 <br>
-                <p>灶王菩薩灶神經 灶神原來在天庭</p>
-                <p>只因人世心改變 玉帝差吾下凡塵</p>
-                <p>親身下降察善惡 看民回心不回心</p>
-                <p>灶神本是一家主 莫把菩薩看的輕</p>
-                <p>灶王府君家家有 凡眼怎見神靈身</p>
-                <p>時時家家親察照 善善惡惡看得清</p>
-                <p>有等不賢潑婦女 全不把吾放在心</p>
-                <p>灶上堆得不成樣 鞋襪放在上面存</p>
-                <p>主家之人不管說 穢物廚中用意烹</p>
-                <p>那論大小衣物等 滿灶熏得惡霧行</p>
-                <p>不管潔淨不潔淨 輕慢神靈罪不輕</p>
-                <p>牛犬畜肉放灶上 你看欺心不欺心</p>
-                <p>守自灶前把人罵 惡言惡語實難聽</p>
-                <p>有等婦人灶前哭 哭得吾神不安寧</p>
-                <p>掃把打灶有大過 坐灶之人罪不輕</p>
-                <p>殺雞灶上來砍殺 那有這樣大膽人</p>
-                <p>年頭月尾不打掃 灰塵霧住吾得身</p>
-                <p>這樣把神來輕慢 可恨凡民大欺心</p>
-                <p>個個神壽有人敬 那個說起吾灶神</p>
-                <p>八月初三神壽誕 全不提動半毫分</p>
-                <p>是神壽誕鬧熱熱 唯有灶神冷清清</p>
-                <p>民若把吾神敬   八月初三記在心</p>
-                <p>灶前便把香燈點 茶果齋供盡片心</p>
-                <p>非怪吾神要爾敬 因你凡民大欺心</p>
-                <p>奉勸世人休忘記 無吾灶神也不成</p>
-                <p>人有誠心神感應 五瘟使者不入門</p>
-                <p>一切禍患齊掃散 丟下前緣接後因</p>
-                <p>回頭再把灶王表 正直無私不順情</p>
-                <p>轉回天宮奏</p>
-                <p>玉帝 善惡不隱半毫分</p>
-                <p>玉帝聞言心大怒 差遣五瘟下凡塵</p>
-                <p>積善之家不可去 作惡之家汝便行</p>
-                <p>兇惡男女遭大難 頃刻急症入幽冥</p>
-                <p>死在陰司還受罪 你想逃脫萬不能</p>
-                <p>罪滿轉輪王發放 善惡報應見分明</p>
-                <p>大善投胎大富貴 中等頭胎中等人</p>
-                <p>大惡投生變畜類 小惡投生變賤貧</p>
-                <p>或是癡聾與瘖啞 牛馬豬羊去還人</p>
-                <p>灶王今把凡民勸 依得神言是福人</p>
-                <p>虧心除盡平生福 奸巧短壽把命傾</p>
-                <p>閤家人口保安甯 世人不聽吾神勸</p>
-                <p>怕你後悔枉費心 吾神臘月歸天去</p>
-                <p>真言奏上玉皇尊 惡惡善善從直講</p>
-                <p>再不隱瞞半毫分 大秤小斗心不足</p>
-                <p>還在人前使假銀 扭毫捏索良心喪</p>
-                <p>買賣欺善不公平 淫人婦女罪不輕</p>
-                <p>貪人財物喪良心 暗地把人來唆弄</p>
-                <p>他再中間做好人 有的仗勢來欺弱</p>
-                <p>欺老罵少起惡心 打僧罵道怨天地</p>
-                <p>勸人開葷罪不輕 作賤五穀該何罪</p>
-                <p>貪圖口腹忍傷生 在生之時不自問</p>
-                <p>死後陰司見假真 地獄受盡千般苦</p>
-                <p>陽世那個說是真 敲瞌他人錢合米</p>
-                <p>變做牛馬還他人 爾看一報還一報</p>
-                <p>奉勸男女仔細想 莫把吾言當假真</p>
-                <p>笑順父母為第一 忠君愛民一等人</p>
-                <p>第二須當敬兄長 第三夫婦要和平</p>
-                <p>朋友說話要信實 奴僕寬恕可在心</p>
-                <p>一般也是父母養 只為家寒兩離分</p>
-                <p>假使自己兒和女 別人屈打憐不憐</p>
-                <p>行事須當存天理 切莫欺死又瞞生</p>
-                <p>逢人將經來勸解 廣積陰德與兒孫</p>
-                <p>灶王勸人費心苦 看民回心不回心</p>
-                <p>偈曰</p>
-                <p>東廚司命君 留下灶王經 見面抄一本 子孫享科名</p>
-                <p>眼下無災厄 禍患不臨門 吾神八月壽 初三記在心</p>
-                <p>若把吾經唸 齋戒忌油葷 初一並十五 各自要誠心</p>
-                <p>信者有好處 不信自墮身 死後見報復 報應見假真</p>
-                <p>勸人抄十卷 解去一世冤 勸人抄百本 九祖得升天</p>
-                <p>吾神不虛說 保你富貴全 不敬吾神者 枉生塵世間</p>
-                <br><br>
-                <h1>灶君降筆文</h1>
-                <br>
-                <p>教事已停 吾來降臨 一家之主 萬戶福神</p>
-                <p>職掌冊簿 絲毫奏呈 時逢末劫 苦救眾生</p>
-                <p>諸神屢降 疊作訓文 家中善惡 一一講明</p>
-                <p>不敬天地 不禮神明 不孝雙親 不奉先人</p>
-                <p>不畏王法 不重師尊 不敬伯叔 不和鄉鄰</p>
-                <p>夫妻反目 兄弟傷情 最恨婦女 不事二尊</p>
-                <p>不和妯娌 不敬夫君 暗唆丈夫 遂把家分</p>
-                <p>若分家業 不讓分文 爾為男子 罔有乃身</p>
-                <p>放僻邪侈 奸盜邪淫 縱使妻子 辱罵尊親</p>
-                <p>不分內外 不別尊卑 好尚作偽 欺哄愚人</p>
-                <p>閑遊懶惰 不重儉勤 謀人田產 百計橫強</p>
-                <p>貧不安分 詐索金銀 至於吾灶 五祀獨尊</p>
-                <p>或傍牛圈 或對豬門 近或雞圈 臭氣難聞</p>
-                <p>或當五臘 咒罵紛紛 或敲鍋灶 赤體露身</p>
-                <p>或烘衣服 哭唱灶門 或有產婦 舉足亂行</p>
-                <p>或罵兒女 大氣高聲 吾今言明 各宜小心</p>
-                <p>善惡冊籍 不差毫分 每月晦日 奏上天庭</p>
-                <p>善超惡墮 毫不容情 最喜男女 拜佛誦經</p>
-                <p>果能改悔 片善登存 呂公起念 感動吾神</p>
-                <p>愈公愈妄 現身指陳 非愛享祭 非喜香燈</p>
-                <p>一家大小 總在心真 吾言雖淺 願人奉行</p>
-                <p>戒之勉之 敬奉吾經 禍患不起 福子家興</p>
+                <p>城隍使司。受封顯佑伯。加封綏靖侯。晉封則曰威靈公。</p>
+                <p>司陰陽。察善惡。定功過。該境有福神檢查。</p>
+                <p>各家有灶神紀錄。凡人為善為惡。難逃神鑒。</p>
+                <p>蓋在人身中。各有三尸之氣。現於頭上。</p>
+                <p>善氣清而白。惡氣濁而黑。黑白攸分。而善惡明矣。</p>
+                <p>人有肉眼。視而不見神有慧眼。望而先知。</p>
+                <p>故仙佛修煉功深。頭現圓光。俗骨所未有也。</p>
+                <p>然清而白者為善。濁而黑者為惡。人亦何苦。</p>
+                <p>不爲清白。甘為濁黑。清白輕而昇。濁黑重而墜。</p>
+                <p>昇於天。墜於地。由人自為之耳。惟人有善惡之行。</p>
+                <p>故天地有賞罰之判。賞善罰惡。陰陽同歸一理。</p>
+                <p>神職陰司。案牘疊進。災數流行。未能稍息。</p>
+                <p>觀見眾生不悟。大為憫念。經行於世。若能遵守。</p>
+                <p>悔過者。赦其罪。向善者。錄其功。天道福善禍淫。</p>
+                <p>自古已然。豈至今日而無憑。為善最樂。立德為先。</p>
+                <p>士人能立德。富貴保前程。農人能立德。穀豆年年成。</p>
+                <p>工商能立德。利市倍通亨。或講經以明理。或誦經而修持。</p>
+                <p>男女尋經旨。孝感在時時。學經必學真。真心達鬼神。</p>
+                <p>求子天送子。求壽壽長春。疾病轉康強。生產護閨房。</p>
+                <p>陰功朝夕種。渡化超天堂。水火能解脫。刀兵不相侵。</p>
+                <p>為霖祈濟旱。逐疫轉天心。震災行地運。仰天護力深。</p>
+                <p>道高龍虎伏。德重鬼神欽。世教必維持。人道庶不沉。</p>
+                <p>或則為王公為將相。出而治世。或則為仙佛為聖賢。出而化世。</p>
+                <p>此先因後果之道也。仁以成果。恩澤綿長。義以成果。光大顯揚。</p>
+                <p>禮以成果。兆慶禎祥。智以成果。歷久彌彰。信以成果。厚積流光。</p>
+                <p>試看古今治亂。家國之興衰如何。德積久而後興。惡積久而後敗。</p>
+                <p>勿羨眼前華。勿失操勵志。凡有名節所關。人倫所重。能以危難之中。</p>
+                <p>人所難為。我獨為之。於慾界之場。人所難忍。我獨忍之。</p>
+                <p>一念之誠。善感天格。益其聰明。助其神氣。命本貧也。償以富。</p>
+                <p>命本賤也。陞以貴。命本富與貴也。昌以嗣。永以壽。報應無差。遲早而已。</p>
+                <p>恭叩</p>
+                <p>威靈顯赫護國佑民城隍尊神 (三稱)</p>
             </div>
 	    </div>
 	</div>
