--- a/chance/bookDaDong.html
+++ b/chance/bookDaDong.html
@@ -52,7 +52,7 @@
                 <h1>南宮孚佑帝君降筆大洞真經</h1>
                 <br>
                 <p>孚佑帝君讚曰</p>
-                <p>關聖帝君。作事清白不愧為聖行為。端正方可為神。</p>
+                <p>關聖帝君。作事清白不愧為聖。行為端正方可為神。</p>
                 <p>孔夫子。何為聖。聖所以作春秋也。</p>
                 <p>關夫子。何為聖。聖所以讀春秋也。</p>
                 <p>先聖後聖其揆一也。</p>
@@ -105,7 +105,7 @@
                 <p>求壽天賜福。父母享遐齡。伯叔並昆仲。自已可延生。</p>
                 <p>一切高朗誦。分功祥瑞增。如求過世樁萱者。</p>
                 <p>並求怕叔與弟兄。朝夕虔朗誦。快樂逍遙登。</p>
-                <p>照吾經中語。九元七祖盡超昇。若求自已福。</p>
+                <p>照吾經中語。九玄七祖盡超昇。若求自已福。</p>
                 <p>並祈闔家平。日讀千百語。夜誦百千聲。</p>
                 <p>驅邪並逐祟。禎祥紫氣臨。求名及與利。</p>
                 <p>虎榜定標名。利人並利己。利害看分明。</p>
@@ -116,21 +116,21 @@
                 <p>口誦心而維。必得把善施。世人可瞞騙。</p>
                 <p>青天不可欺。欲挽人覺悟。神仙下瑤池。</p>
                 <p>或歌或作賦。或曲並吟詩。聲聲喚人醒。</p>
-                <p>句句字珠璣。說吾身現身。說法渡眾生。</p>
-                <p>吾居唐孝廉。出仕甚古風。官吏職欽點。</p>
-                <p>巡狩逢師鍾。</p>
+                <p>句句字珠璣。說吾身。現身說法渡眾生。</p>
+                <p>吾居唐孝廉。出仕甚古風。官吏職。欽點巡狩。</p>
+                <p>逢師鍾。</p>
                 <p>一夢南柯熟黃粱。平生事業盡皆空。嗟晚不得。</p>
                 <p>先帝高宗。受師點化。攜妻子榮歸故鄉。住古洞。</p>
-                <p>洞裡之賓取名字。子亡妻卒。曰純陽。學劍法。</p>
-                <p>柳星收為童。苦修練。玉皇封金闕內相。掌善惡。</p>
-                <p>五文昌內稽過功。八仙中曰醉翁。世道茫茫走西東。</p>
-                <p>多少田園也是空。尋得名利珍珍寶。付與兒孫一場空。</p>
-                <p>一旦咽喉呼吸斷。了了然然總是空。兒孫滿堂怎得見。</p>
-                <p>黃泉路上不相逢。孽鏡上。憑過功。自已平生不修德。</p>
-                <p>到頭何話見閻王。積些家業如珠寶。難贖冤愆上天堂。</p>
-                <p>何不學成袁了凡。可脫苦海渺茫茫。不孝子。雷電攻。</p>
-                <p>好淫悖逆經免誦。致引天廷降災殃。為人知禮必知義。</p>
-                <p>尊重三綱及五常。勤修德。積善功。吾經朗誦恭叩請</p>
+                <p>洞裡之賓取名字。子亡妻卒曰純陽。學劍法柳星收為童。</p>
+                <p>苦修練。玉皇封金闕內相掌善惡。五文昌內稽過功。</p>
+                <p>八仙中曰醉翁。世道茫茫走西東。多少田園也是空。</p>
+                <p>尋得名利珍珍寶。付與兒孫一場空。一旦咽喉呼吸斷。</p>
+                <p>了了然然總是空。兒孫滿堂怎得見。黃泉路上不相逢。</p>
+                <p>孽鏡上。憑過功。自已平生不修德。到頭何話見閻王。</p>
+                <p>積些家業如珠寶。難贖冤愆上天堂。何不學成袁了凡。</p>
+                <p>可脫苦海渺茫茫。不孝子。雷電攻。好淫悖逆經免誦。</p>
+                <p>致引天廷降災殃。為人知禮必知義。尊重三綱及五常。</p>
+                <p>勤修德。積善功。吾經朗誦恭叩請</p>
                 <p>金闕內相妙道天尊。(三稱)</p>
             </div>
 	    </div>
