--- a/chance/bookMingSheng.html
+++ b/chance/bookMingSheng.html
@@ -7,7 +7,7 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="恩主公,百首,籤詩,百首籤詩,恩主公籤詩">
     <meta name="author" content="Benson">
-    <!-- <link rel="icon" href="../../favicon.ico"> -->
+    <!-- <link rel="icon" href="../../favicon.ico"僧> -->
 
 	<title>關聖帝君應驗桃園明聖經</title>
 	<script src="js/chancelist.js"></script>
@@ -126,7 +126,7 @@
                 <p>白了鬚鬢星星。力倦馬羸刀鈍。費盡赤膽忠心。換得個封侯金印。</p>
                 <p>到如今亂臣賊子。捕風捉影。奸貪讒佞。結黨欺凌。言無一定。</p>
                 <p>不思禮義廉恥。孝悌忠信。事每胡行。屢圖僥倖。篡君位。</p>
-                <p>戮忠臣。好貸財。淫美色。殺人縱性。只顧爽心樂事。</p>
+                <p>戮忠臣。好貨財。淫美色。殺人縱性。只顧爽心樂事。</p>
                 <p>豈曉得後來報應。古今好事多磨。毋勉強苟求捷徑。如彩雲琉璃。</p>
                 <p>鮮花明月。人不知機。如剛刀快缺。妄動橫行。造下了些冤業。</p>
                 <p>遠則幾年。近則幾月。報應無差。法難漏洩。如人未遭逢。</p>
@@ -309,7 +309,7 @@
                 <p>重則命周倉（將軍）斬之。毋悔。</p>
 
 
-                <p>明聖經本係夢與玉泉寺僧。僧酲而傳述焉。</p>
+                <p>明聖經本係夢與玉泉寺僧。僧醒而傳述。</p>
                 <p>首句漢漢。上一漢字乃代名。即大漢也。</p>
                 <p>漢壽亭。係地名也。其先噣咐人人誦此經。</p>
                 <p>是以效驗。歆動人心也。中言精忠沖日月。</p>
