--- a/chance/bookMingSheng.html
+++ b/chance/bookMingSheng.html
@@ -270,7 +270,7 @@
                 <p>輔德討罪忠義神。&nbsp&nbsp覺頑化迷感應神。</p>
                 <p>延生逐疫慈祥神。&nbsp&nbsp飛沙走石截路神。</p>
                 <p>翻江遶海五湖神。&nbsp&nbsp崩山頹嶺鐵甲神。</p>
-                <p>凍水開水結化星。&nbsp&nbsp抽芽綻葉發育星。</p>
+                <p>凍水開冰結化星。&nbsp&nbsp抽芽綻葉發育星。</p>
                 <p>開花結果嬌媚星。&nbsp&nbsp長禾秀榖益穗星。</p>
                 <p>走獸飛禽捕捉星。&nbsp&nbsp魚蝦蟹鱉踴躍星。</p>
                 <p>飛跳諸蟲纏擾星。&nbsp&nbsp作文制字文昌星。</p>
